--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@eslint/js": "^9.38.0",
 		"@internationalized/date": "^3.8.1",
 		"@lucide/svelte": "^0.544.0",
+		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/adapter-vercel": "^6.0.0",
 		"@sveltejs/kit": "^2.47.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
